ANON-UI: client side form validation

--- a/csp-apps/anonymization/anon-server/src/main/resources/templates/fragments.html
+++ b/csp-apps/anonymization/anon-server/src/main/resources/templates/fragments.html
@@ -12,8 +12,8 @@
     <!--font-awsome-->
     <link th:href="@{/webjars/font-awesome/css/font-awesome.min.css}" rel="stylesheet" media="screen" />
 
-    <link rel="stylesheet" th:href="@{/assets/css/jumbotron.css}"/>
-    <link rel="stylesheet" th:href="@{/assets/css/custom.css}"/>
+    <link rel="stylesheet" th:href="@{/css/jumbotron.css}"/>
+    <link rel="stylesheet" th:href="@{/css/custom.css}"/>
 
 </head>
 <body>
@@ -101,7 +101,6 @@
 
     <script th:src="@{/webjars/bootstrap-table/1.9.1/bootstrap-table.js}"></script>
     <script th:src="@{/webjars/bootstrap-table/1.9.1/locale/bootstrap-table-en-US.js}"></script>
-
     <script>
         $(document).ready(function () {
             $("a").tooltip({
