--- a/csp-apps/integration-layer/il-server/src/main/resources/templates/layout/navbar.html
+++ b/csp-apps/integration-layer/il-server/src/main/resources/templates/layout/navbar.html
@@ -24,20 +24,20 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                             <span class="glyphicon glyphicon-user"></span>&nbsp;
-                            <strong th:if="${user!=null}" th:text="${user.username}">admin</strong>
+                            <strong th:text="${user!=null ? user.username:'demo'}">admin</strong>
                             <span class="glyphicon glyphicon-chevron-down"></span>
                         </a>
                         <ul class="dropdown-menu">
                             <li>
                                 <div class="navbar-login">
-                                    <div class="row">
+                                    <div class="row" style="padding-top: 10px">
                                         <div class="col-lg-4">
                                             <p class="text-center">
                                                 <span class="glyphicon glyphicon-user icon-size"></span>
                                             </p>
                                         </div>
                                         <div class="col-lg-8">
-                                            <p th:if="${user!=null}" class="text-left" th:text="${user.username}">admin</p>
+                                            <p class="text-left" th:text="${user!=null ? user.username:'demo'}">admin</p>
                                             <p class="text-left">
                                                 <strong> </strong>
                                             </p>
@@ -50,9 +50,9 @@
                             <li>
                                 <div class="navbar-login navbar-login-session">
                                     <div class="row">
-                                        <div class="col-lg-12">
+                                        <div class="col-lg-12 text-center">
                                             <p>
-                                                <a href="/logout/" class="btn btn-danger btn-block">Logout</a>
+                                                <a href="/logout/" class="btn btn-danger" style="width:80%">Logout</a>
                                             </p>
                                         </div>
                                     </div>
