Updating Env file

--- a/csp-apps/configuration/conf-client-cspapp/src/main/resources/shellscripts/templ/env.j2
+++ b/csp-apps/configuration/conf-client-cspapp/src/main/resources/shellscripts/templ/env.j2
@@ -28,6 +28,14 @@ XXXMAILPASSWORDXXX={{ mail.password }}
 {{ service.docr_name.upper() }}_DOMAIN={{ service.external_name }}.{{ csp_name }}.{{ domain }}
 {{ service.docr_name.upper() }}_CSP_SUBDOMAIN_PREFIX={{ service.external_name }}
 {% endif -%}
+{% if service.external_name == 'anon-ui' -%}
+ANON_UI_DOMAIN={{ service.external_name }}.{{ csp_name }}.{{ domain }}
+ANON_UI_DOMAIN_CSP_SUBDOMAIN_PREFIX={{ service.external_name }}
+{% endif -%}
+{% if service.external_name == 'il-ui' -%}
+IL_UI_DOMAIN={{ service.external_name }}.{{ csp_name }}.{{ domain }}
+IL_UI_CSP_SUBDOMAIN_PREFIX={{ service.external_name }}
+{% endif -%}
 
 {{ service.docr_name.upper() }}_DOCR_PORT={{ service.docr_port }}
 {{ service.docr_name.upper() }}_PORT=443
