Updating Env file

--- a/csp-apps/configuration/conf-client-cspapp/src/main/resources/shellscripts/templ/env.j2
+++ b/csp-apps/configuration/conf-client-cspapp/src/main/resources/shellscripts/templ/env.j2
@@ -32,7 +32,7 @@ XXXMAILPASSWORDXXX={{ mail.password }}
 ANON_UI_DOMAIN={{ service.external_name }}.{{ csp_name }}.{{ domain }}
 ANON_UI_DOMAIN_CSP_SUBDOMAIN_PREFIX={{ service.external_name }}
 {% endif -%}
-{% if service.external_name == 'il-ui' -%}
+{% if service.external_name == 'integration-ui' -%}
 IL_UI_DOMAIN={{ service.external_name }}.{{ csp_name }}.{{ domain }}
 IL_UI_CSP_SUBDOMAIN_PREFIX={{ service.external_name }}
 {% endif -%}
