rulesets page refactoring

--- a/csp-apps/anonymization/anon-server/src/main/resources/templates/pages/mappings.html
+++ b/csp-apps/anonymization/anon-server/src/main/resources/templates/pages/mappings.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments::head(title='Dashboard', description='dashboard description')">
-</head>
+<head th:replace="fragments::head(title='Dashboard', description='dashboard description')"></head>
 
 <body>
 
@@ -16,7 +15,6 @@
             <p>&nbsp;</p>
         </div>
     </div>
-
 
     <div class="row">
         <div class="col-md-12">
