Updating module.env.j2

--- a/csp-apps/configuration/conf-client-cspapp/src/main/resources/shellscripts/templ/module.env.j2
+++ b/csp-apps/configuration/conf-client-cspapp/src/main/resources/shellscripts/templ/module.env.j2
@@ -15,4 +15,8 @@
 {{ service.docr_name.upper()}}_PATH_{{ key.upper() }}={{ value }}
 {% endfor -%}
 
+{% for key, value in service.env_properties.items() -%}
+{{ service.docr_name.upper()}}_{{ key.upper() }}={{ value }}
+{% endfor -%}
+
 {% endfor %}
