--- a/csp-apps/configuration/conf-client-cspapp/src/main/resources/shellscripts/templ/csp-sites.conf.j2
+++ b/csp-apps/configuration/conf-client-cspapp/src/main/resources/shellscripts/templ/csp-sites.conf.j2
@@ -61,7 +61,7 @@
 
           {% if service.agent == true-%}
           AmAgent On
-          AmAgentConf /web_agents/apache24_agent/bin/../instances/agent_{{ service.internal_name }}/config/agent.conf
+          AmAgentConf /web_agents/apache24_agent/bin/../instances/agent_{{ service.external_name }}/config/agent.conf
           {% endif -%}
 
     </VirtualHost>
