Updating module.env.j2

--- a/csp-apps/configuration/conf-client-cspapp/src/main/resources/shellscripts/templ/module.env.j2
+++ b/csp-apps/configuration/conf-client-cspapp/src/main/resources/shellscripts/templ/module.env.j2
@@ -18,5 +18,5 @@
 {% for key, value in service.env_properties.items() -%}
 {{ service.docr_name.upper()}}_{{ key.upper() }}={{ value }}
 {% endfor -%}
-
+{{ service.docr_name.upper()}}_PROTOCOL=https4-in
 {% endfor %}
