--- a/csp-apps/configuration/conf-server/src/main/resources/templates/fragments.html
+++ b/csp-apps/configuration/conf-server/src/main/resources/templates/fragments.html
@@ -76,16 +76,35 @@
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                     <span class="glyphicon glyphicon-user"></span>&nbsp;
-                    <strong><span th:text="${user}"></span></strong>
+                    <strong th:text="${user!=null ? user.username:'demo'}">admin</strong>
                     <span class="glyphicon glyphicon-chevron-down"></span>
                 </a>
                 <ul class="dropdown-menu">
+                    <li>
+                        <div class="navbar-login">
+                            <div class="row">
+                                <div class="col-lg-4">
+                                    <p class="text-center">
+                                        <span class="glyphicon glyphicon-user icon-size"></span>
+                                    </p>
+                                </div>
+                                <div class="col-lg-8">
+                                    <p class="text-left" th:text="${user!=null ? user.username:'demo'}">admin</p>
+                                    <p class="text-left">
+                                        <strong> </strong>
+                                    </p>
+                                    <p class="text-left small"></p>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="divider"></li>
                     <li>
                         <div class="navbar-login navbar-login-session">
                             <div class="row">
                                 <div class="col-lg-12">
                                     <p>
-                                        <a href="/logout" class="btn btn-danger btn-block">Logout</a>
+                                        <a href="/logout/" class="btn btn-danger btn-block">Logout</a>
                                     </p>
                                 </div>
                             </div>
