--- a/csp-apps/configuration/conf-client-cspapp/src/main/resources/templates/pages/install-register.html
+++ b/csp-apps/configuration/conf-client-cspapp/src/main/resources/templates/pages/install-register.html
@@ -209,25 +209,25 @@
                 <div class="row">
                     <div class="col-md-3 col-xs-6">
                         <div class="form-group">
-                            <label for="smtp_host">SMPT Host:</label>
+                            <label for="smtp_host">SMTP Host:</label>
                             <input id="smtp_host" name="smtp_host" type="text" class="form-control"></input>
                         </div>
                     </div>
                     <div class="col-md-3 col-xs-6">
                         <div class="form-group">
-                            <label for="smtp_port">SMPT Port:</label>
+                            <label for="smtp_port">SMTP Port:</label>
                             <input id="smtp_port" name="smtp_port" type="text" class="form-control"></input>
                         </div>
                     </div>
                     <div class="col-md-3 col-xs-6">
                         <div class="form-group">
-                            <label for="smtp_user">SMPT Username:</label>
+                            <label for="smtp_user">SMTP Username:</label>
                             <input id="smtp_user" name="smtp_user" type="text" class="form-control"></input>
                         </div>
                     </div>
                     <div class="col-md-3 col-xs-6">
                         <div class="form-group">
-                            <label for="smtp_pass">SMPT Password:</label>
+                            <label for="smtp_pass">SMTP Password:</label>
                             <input id="smtp_pass" name="smtp_pass" type="password" class="form-control"></input>
                         </div>
                     </div>
