--- a/csp-apps/regular-reports/regrep-emailer/src/main/resources/templates/plain-text.html
+++ b/csp-apps/regular-reports/regrep-emailer/src/main/resources/templates/plain-text.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns:v="urn:schemas-microsoft-com:vml" xmlns:th="http://www.w3.org/1999/xhtml">
+<html xmlns:v="urn:schemas-microsoft-com:vml" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -321,6 +321,14 @@
 
     </table>
     <!-- end section -->
+
+    <!-- report data tables section -->
+
+    <div th-insert="data-table-fragment :: reportable"></div>
+
+
+    <!-- end report data tables section -->
+
 
     <!-- footer ====== -->
     <table border="0" width="100%" cellpadding="0" cellspacing="0" bgcolor="f4f4f4">
