--- a/csp-apps/regular-reports/regrep-emailer/src/main/resources/templates/plain-text.html
+++ b/csp-apps/regular-reports/regrep-emailer/src/main/resources/templates/plain-text.html
@@ -48,6 +48,20 @@
             font-size: 14px;
             border: 0;
         }
+
+        table.reportable {
+            border-collapse: collapse;
+            width: 100%;
+        }
+
+        th.reportable {
+            text-align: left;
+        }
+
+        tr.reportable {
+            border-bottom: 1px solid #ddd;
+        }
+
         /* ----------- responsivity ----------- */
 
         @media only screen and (max-width: 640px) {
@@ -89,7 +103,7 @@
             .main-button {
                 width: 220px !important;
             }
-            /*-------- secions ----------*/
+            /*-------- sections ----------*/
             .section-img img {
                 width: 320px !important;
                 height: auto !important;
@@ -229,7 +243,7 @@
                         <td align="left">
                             <table border="0" width="590" align="center" cellpadding="0" cellspacing="0" class="container590">
                                 <tr>
-                                    <td align="left" style="color: #888888; font-size: 16px; font-family: 'Work Sans', Calibri, sans-serif; line-height: 24px;">
+                                    <td align="left" style="color: #2F4F4F; font-size: 16px; font-family: 'Work Sans', Calibri, sans-serif; line-height: 24px;">
                                         <!-- section text ======-->
 
                                         <p style="line-height: 24px; margin-bottom:15px;">
@@ -240,11 +254,12 @@
                                         <p style="line-height: 24px;margin-bottom:15px;">
                                             <span th:text="${message}" />
                                         </p>
-                                       <p style="line-height: 24px">
-                                            Kind regards,</br>
+                                        <div th:include="fragments/data-table-fragment :: reportable"></div>
+                                        <br>
+                                        <p style="line-height: 24px">
+                                            Kind regards,<br>
                                             <span th:text="${signature}" />
                                         </p>
-
                                     </td>
                                 </tr>
                             </table>
