SXCSP-465: IL external port needs to be different than the UIs

--- a/csp-apps/configuration/conf-client-cspapp/src/main/resources/shellscripts/templ/csp-sites.conf.j2
+++ b/csp-apps/configuration/conf-client-cspapp/src/main/resources/shellscripts/templ/csp-sites.conf.j2
@@ -35,7 +35,11 @@
     #--------------------------------------------------------#
     #        External
     #--------------------------------------------------------#
-     <VirtualHost *:443>
+     {% if "apache" in docr_name %}
+        <VirtualHost *:443>
+     {% else %}
+        <VirtualHost *:8443>
+     {% endif %}
 
           ServerName {{ service.external_name }}.{{ csp_name }}.{{ domain }}
           Alias /static/ /opt/tc/var/static/
