SXCSP-465: Fix in j2 template logic for external 8443 port on integration service

--- a/csp-apps/configuration/conf-client-cspapp/src/main/resources/shellscripts/templ/csp-sites.conf.j2
+++ b/csp-apps/configuration/conf-client-cspapp/src/main/resources/shellscripts/templ/csp-sites.conf.j2
@@ -35,10 +35,10 @@
     #--------------------------------------------------------#
     #        External
     #--------------------------------------------------------#
-     {% if "apache" in docr_name %}
-        <VirtualHost *:443>
-     {% else %}
+     {% if "integration" in service.external_name %}
         <VirtualHost *:8443>
+     {% else %}
+        <VirtualHost *:443>
      {% endif %}
 
           ServerName {{ service.external_name }}.{{ csp_name }}.{{ domain }}
