SXCSP-260: Featuring actual dates in reports

--- a/csp-apps/regular-reports/regrep-emailer/src/main/resources/templates/fragments/data-table-fragment.html
+++ b/csp-apps/regular-reports/regrep-emailer/src/main/resources/templates/fragments/data-table-fragment.html
@@ -3,7 +3,7 @@
     <body>
         <div th:fragment="reportable">
             <table class="reportable" >
-                <caption class="reportable" style="color: #5caad2">Elasticsearch Results</caption>
+                <!--<caption class="reportable" style="color: #5caad2">Elasticsearch Results</caption>-->
                 <tr class="reportable">
                     <th class="reportable" th:text="${thymeleafTypeDescription}">Document Type</th>
                     <th class="reportable" th:text="${thymeleafNumberDescription}">Number of Documents created</th>
