Docker profile + FIXES

--- a/csp-apps/vcbridge/vcb-teleconf/src/main/resources/webapp/views/index.html
+++ b/csp-apps/vcbridge/vcb-teleconf/src/main/resources/webapp/views/index.html
@@ -85,7 +85,7 @@
 <div id="content" class="container-fluid">
 
     <div id="preloader"></div>
-    <iframe name="vcbframe" id="vcbframe" frameborder="0" marginwidth="0" marginheight="0" scrolling="auto" onload="" allowtransparency="false"></iframe>
+    <iframe name="vcbframe" id="vcbframe" allow="geolocation; microphone; camera" frameborder="0" marginwidth="0" marginheight="0" scrolling="auto" onload="" allowtransparency="false"></iframe>
 
 </div>
 
