--- a/csp-apps/vcbridge/vcb-admin/src/main/resources/templates/layout.html
+++ b/csp-apps/vcbridge/vcb-admin/src/main/resources/templates/layout.html
@@ -103,8 +103,7 @@
   </div>
 
   <div class="footer navbar-fixed-bottom">
-    <a href="#">CSP</a>
-    &copy; 2017. <span class="float-right">Powered by <a href="http://sastix.com">Sastix</a>
+    <a href="#">CSP</a> &copy; 2018.
     </span>
   </div>
 
