--- a/csp-apps/regular-reports/regrep-emailer/src/main/resources/templates/fragments/exc-table-fragment.html
+++ b/csp-apps/regular-reports/regrep-emailer/src/main/resources/templates/fragments/exc-table-fragment.html
@@ -9,8 +9,10 @@
                     <th>Message</th>
                 </tr>
                 <tr class="reportable-exc" th:each="excLog : ${excLogsList}">
-                    <td class="reportable-exc" th:text="${excLog.source.timestamp}">2018-04-19T03:04:21.007Z<br>
-                        <span th:text="${excLog.source.program}"><strong>CSP.MISP-ADAPTER</strong></span>
+                    <td class="reportable-exc">
+                        <span th:text="${excLog.source.timestamp}">2018-04-19T01:03:47.516Z</span>
+                        <br>
+                        <strong><span th:text="${excLog.source.program}"></span></strong>
                     </td>
                     <td class="reportable-exc" th:text="${excLog.source.message}">2018-04-19 03:04:20 csp-misp-adapter.local.demo1-csp.athens.intrasoft-intl.private CSP.MISP-ADAPTER[38]: Servlet.service() for servlet [dispatcherServlet] in context with path [] threw exception [Request processing failed; nested exception is java.lang.NullPointerException] with root cause</td>
                 </tr>
