--- a/csp-apps/vcbridge/vcb-admin/src/main/resources/templates/createMeeting.html
+++ b/csp-apps/vcbridge/vcb-admin/src/main/resources/templates/createMeeting.html
@@ -41,7 +41,7 @@
 
 
           <div class="tab-content">
-            <div id="menu1" class="tab-pane fade in active">
+            <div id="menu1" class="tab-pane fade in active margin-bt-30">
 
               <input class="datetimeoutput" hidden="true" type="text" th:field="*{start}" placeholder="2011-12-03T10:15:30+01:00" />
               <div class="row form-group">
