added email and name in form and SMTPDetails (json) and environment variables

--- a/csp-apps/configuration/conf-client-cspapp/src/main/resources/templates/pages/install-register.html
+++ b/csp-apps/configuration/conf-client-cspapp/src/main/resources/templates/pages/install-register.html
@@ -209,6 +209,18 @@
                 <div class="row">
                     <div class="col-md-3 col-xs-6">
                         <div class="form-group">
+                            <label for="smtp_host">Sender Name:</label>
+                            <input id="sender_name" name="sender_name" type="text" class="form-control"></input>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-xs-6">
+                        <div class="form-group">
+                            <label for="smtp_host">Sender Email:</label>
+                            <input id="sender_email" name="sender_email" type="text" class="form-control"></input>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-xs-6">
+                        <div class="form-group">
                             <label for="smtp_host">SMTP Host:</label>
                             <input id="smtp_host" name="smtp_host" type="text" class="form-control"></input>
                         </div>
