Various Fixes on standalone installer

--- a/deployment/docker/applications/apache/docker-compose.yml.j2
+++ b/deployment/docker/applications/apache/docker-compose.yml.j2
@@ -43,6 +43,8 @@ networks:
     default:
         external:
             name: ${LOCAL_DOMAIN}
+    installer_net:
+       external: true
 {% endraw %}
 
 
