Teleconf + Jitsi port change to 6443, other fixes

--- a/csp-apps/vcbridge/vcb-admin/src/main/resources/templates/layout.html
+++ b/csp-apps/vcbridge/vcb-admin/src/main/resources/templates/layout.html
@@ -63,7 +63,7 @@
                 <div class="navbar-login navbar-login-session">
                   <div class="row">
                     <div class="col-lg-12">
-                        <a th:href="@{/logout}" class="btn btn-danger btn-block">Logout</a>
+                        <a th:href="@{/logout/}" class="btn btn-danger btn-block">Logout</a>
                     </div>
                   </div>
                 </div>
