Configuration server, CSP edit bug fix

--- a/csp-apps/configuration/conf-server/src/main/resources/templates/pages/csp/update.html
+++ b/csp-apps/configuration/conf-server/src/main/resources/templates/pages/csp/update.html
@@ -47,7 +47,7 @@
                     <div class="col-md-4 col-xs-12">
                         <div class="form-group">
                             <label for="csp_id">CSP ID:</label>
-                            <input class="form-control uuid" id="csp_id" maxlength="36" name="csp_id" type="text" th:value="${cspData.getId()}" readonly="readonly" data-mask="00000000-0000-0000-0000-000000000000" placeholder="________-____-____-____-____________"></input>
+                            <input class="form-control uuid" id="csp_id" maxlength="36" name="csp_id" type="text" th:value="${cspData.getId()}" readonly="readonly" ></input>
                         </div>
                     </div>
                     <div class="col-md-4 col-xs-12">
