Fix: Module Priority as readonly in edit page

--- a/csp-apps/configuration/conf-server/src/main/resources/templates/pages/module/update.html
+++ b/csp-apps/configuration/conf-server/src/main/resources/templates/pages/module/update.html
@@ -55,7 +55,7 @@
                     <div class="col-md-4 col-xs-12">
                         <div class="form-group">
                             <label for="module_start_priority">Start Priority:</label>
-                            <input class="form-control p" id="module_start_priority" maxlength="3" name="module_start_priority" type="text" th:value="${moduleData.getStartPriority()}"></input>
+                            <input class="form-control p" id="module_start_priority" maxlength="3" name="module_start_priority" readonly="readonly" type="text" th:value="${moduleData.getStartPriority()}"></input>
                         </div>
                     </div>
                     <div class="col-md-2 col-xs-12">
