--- a/deployment/scripts/configuration-templates/templates/csp-sites.conf.j2
+++ b/deployment/scripts/configuration-templates/templates/csp-sites.conf.j2
@@ -64,6 +64,10 @@
           AmAgentConf /web_agents/apache24_agent/bin/../instances/agent_{{ service.external_name }}/config/agent.conf
           {% endif -%}
 
+          {% if "integration" in service.external_name %}
+          RequestHeader set CspId-Client-Certificate-Header %{SSL_CLIENT_S_DN_CN}e
+          {% endif %}
+
     </VirtualHost>
     {% endif %}
 {% endfor %}
