fix: mail parameter for sender and sender mail not propagated correctly

--- a/csp-apps/configuration/conf-client-cspapp/src/main/resources/shellscripts/templ/common.env.j2
+++ b/csp-apps/configuration/conf-client-cspapp/src/main/resources/shellscripts/templ/common.env.j2
@@ -15,3 +15,12 @@ XXXMAILSERVERHOSTXXX={{ mail.host }}
 XXXMAILSERVERPORTXXX={{ mail.port }}
 XXXMAILUSERNAMEXXX={{ mail.username }}
 XXXMAILPASSWORDXXX={{ mail.password }}
+XXXMAILSENDERXXX={{ mail.sender }}
+XXXMAILSENDERMAILXXX={{ mail.sendermail }}
+
+MAIL_SERVER_HOST={{ mail.host }}
+MAIL_SERVER_PORT={{ mail.port }}
+MAIL_USERNAME={{ mail.username }}
+MAIL_PASSWORD={{ mail.password }}
+MAIL_SENDER_NAME={{ mail.sender }}
+MAIL_SENDER_EMAIL={{ mail.sendermail }}
