Replacing in with ==

--- a/csp-apps/configuration/conf-client-cspapp/src/main/resources/shellscripts/templ/csp-sites.conf.j2
+++ b/csp-apps/configuration/conf-client-cspapp/src/main/resources/shellscripts/templ/csp-sites.conf.j2
@@ -41,7 +41,7 @@
         <VirtualHost *:5443>
      {% elif 'vc' == service.external_name %}
         <VirtualHost *:6443>
-     {% elif 'teleconf' in service.external_name %}
+     {% elif 'teleconf' == service.external_name %}
         <VirtualHost *:6443>
      {% else %}
         <VirtualHost *:443>
