--- a/csp-apps/configuration/conf-client-cspapp/src/main/resources/shellscripts/templ/csp-sites.conf.j2
+++ b/csp-apps/configuration/conf-client-cspapp/src/main/resources/shellscripts/templ/csp-sites.conf.j2
@@ -41,6 +41,8 @@
         <VirtualHost *:5443>
      {% elif 'vc' == service.external_name %}
         <VirtualHost *:6443>
+     {% elif 'files' == service.external_name %}
+        <VirtualHost *:6443>
      {% elif 'teleconf' == service.external_name %}
         <VirtualHost *:6443>
      {% else %}
