Fix CSP_VCB_TC_03, CSP_VCB_TC_07, CSP_VCB_TC_N02

--- a/csp-apps/vcbridge/vcb-admin/src/main/resources/templates/email/cancellation.html
+++ b/csp-apps/vcbridge/vcb-admin/src/main/resources/templates/email/cancellation.html
@@ -15,7 +15,6 @@
 	<h3>Dear [[${email}]],</h3>
 	<p>The meeting at [[${meeting_date}]] and [[${meeting_time}]] has been cancelled.</p>
 	
-	Best regards,
-	<p>[[${user_first}]], [[${user_lastname}]]</p>
+	<p>Best regards</p>
 </body>
 </html>
