--- a/csp-apps/vcbridge/vcb-admin/src/main/resources/templates/email/invitation.html
+++ b/csp-apps/vcbridge/vcb-admin/src/main/resources/templates/email/invitation.html
@@ -19,7 +19,6 @@
 	<p>Username: [[${meeting_username}]]</p>
 	<p>Password: [[${meeting_password}]]</p>
 	
-	Thank you,
-	<p>[[${user_first}]], [[${user_lastname}]]</p>
+	<p>Thank you</p>
 </body>
 </html>
