Adding csp-name to domain

--- a/deployment/docker/applications/vcb/site-config/csp-sites.conf.j2
+++ b/deployment/docker/applications/vcb/site-config/csp-sites.conf.j2
@@ -69,8 +69,8 @@
 
 
           {% if 'vc' == service.external_name %}
-          ProxyPass / {{ service.protocol }}://vc.{{ domain }}:{{ service.docr_port }}/
-          ProxyPassReverse / {{ service.protocol }}://vc.{{ domain }}:{{ service.docr_port }}/
+          ProxyPass / {{ service.protocol }}://vc.{{ csp_name }}.{{ domain }}:{{ service.docr_port }}/
+          ProxyPassReverse / {{ service.protocol }}://vc.{{ csp_name }}.{{ domain }}:{{ service.docr_port }}/
           {% else %}
           {% set docr_name = service.docr_name.split('-')[0] %}
           ProxyPass / {{ service.protocol }}://csp-{{ docr_name }}:{{ service.docr_port }}/
