SMTP part2 - regenerating the environment

--- a/csp-apps/configuration/conf-client-cspapp/src/main/resources/templates/pages/install-smtp.html
+++ b/csp-apps/configuration/conf-client-cspapp/src/main/resources/templates/pages/install-smtp.html
@@ -41,8 +41,8 @@
                     <div class="col-md-12 col-sm-12">
                         <p class="lead pull-left">Outgoing Emails</p>
                         <p class="pull-right help-block">The configuration below enables use of SMTP services for CSP.
-                            For CSP supported SMTP settings, please refer to the installation manual. To activate the
-                            changes, a system stop/start cycle from the "System" page is required.</p>
+                            For supported SMTP settings (e.g. TLS), please refer to the installation manual. To activate any
+                            change, a system stop/start cycle from the "System" page is required.</p>
                     </div>
                 </div>
 
